--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,8 +1,10 @@
 cmake_minimum_required(VERSION 3.0)
 
-
-
-
+if(CMAKE_HOST_UNIX OR CMAKE_HOST_APPLE)
+   set(CMAKE_CXX_COMPILER /usr/bin/clang++)
+   set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -stdlib=libc++")
+   set(CMAKE_C_COMPILER /usr/bin/clang)
+endif()
 
 
 
